projects/02-kubernetes-basic/manifests/nginx-deployment copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3          # ★Podを常に3つ維持するように命令
  selector:
    matchLabels:
      app: my-web-app  # どのPodを管理対象にするかの目印
  template:
    metadata:
      labels:
        app: my-web-app # Podに付けるラベル
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        # --- ここからプローブの設定 ---
        livenessProbe:
          httpGet:
            path: /    # チェック用のパス
            port: 80        # アプリが待機しているポート
          initialDelaySeconds: 3  # 起動後、3秒待ってからチェック開始
          periodSeconds: 10       # 10秒ごとにチェック
        
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        # --- ここまでプローブの設定 ---
        resources:
          requests:
            memory: "128MiB"
            cpu: "250m"      # 250m = 0.25コア
          limits:
            memory: "256MiB"
            cpu: "500m"      # 500m = 0.5コア
        ports:
        - containerPort: 80
