projects/02-kubernetes-basic/manifests/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3          # ★Podを常に3つ維持するように命令
  selector:
    matchLabels:
      app: my-web-app  # どのPodを管理対象にするかの目印
  template:
    metadata:
      labels:
        app: my-web-app # Podに付けるラベル
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        # --- ここからプローブの設定 ---
        livenessProbe:
          httpGet:
            path: /healthz    # チェック用のパス
            port: 8080        # アプリが待機しているポート
          initialDelaySeconds: 3  # 起動後、3秒待ってからチェック開始
          periodSeconds: 10       # 10秒ごとにチェック

        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        # --- ここまでプローブの設定 ---

        ports:
        - containerPort: 80
