projects/02-kubernetes-basic/manifests/backend-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: echo-server
        image: hashicorp/http-echo  # 指定した文字を返すだけの便利な軽量イメージ
        args:
          - "-text=Hello API! This is the Backend Service."
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
