projects/02-kubernetes-basic/manifests/frontend-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-api
  template:
    metadata:
      labels:
        app: frontend-api
    spec:
      containers:
      - name: echo-server
        image: hashicorp/http-echo  # 指定した文字を返すだけの便利な軽量イメージ
        # --- ここを追加 ---
        livenessProbe:
          httpGet:
            path: /           # トップページにアクセスできるか確認
            port: 80
          initialDelaySeconds: 5 # 起動後5秒待ってから開始
          periodSeconds: 15      # 15秒おきにチェック
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 5
        args:
          - "-text=Hello API! This is the frontend Service."
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
