projects/02-kubernetes-basic/manifests/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
spec:
  type: LoadBalancer      # ローカル環境（minikube）で外部公開するための設定
  selector:
    app: my-web-app    # どのPodを束ねるか？（Deploymentのラベルと一致させる）
  ports:
    - protocol: TCP
      port: 80        # Serviceが受け付けるポート
      targetPort: 80  # Pod側で開いているポート
