projects/02-kubernetes-basic/manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # パスの書き換え設定
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service  # 2つ目のサービスへ
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-nginx-service  # 1つ目のサービスへ
            port:
              number: 80
      - path: /shop  # "http://127.0.0.1/shop" へのアクセス
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api2   # "http://127.0.0.1/api" へのアクセス
        pathType: Prefix
        backend:
          service:
            name: backend-service2
            port:
              number: 80
